--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/Controls/ProfileDetailControl.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/Controls/ProfileDetailControl.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="SoteriaApp.Views.Controls.ProfileDetailControl">
+             x:Class="SoteriaApp.Views.Controls.ProfileDetailControl"
+             >
 
     <StackLayout Padding="10">
         <Label Text="This is a detail page. To get the 'triple' line icon on each platform add a icon to each platform and update the 'Flyout' page with an Icon that references it."/>
