--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/LoginPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/LoginPage.xaml
@@ -43,7 +43,7 @@
                 </Grid>
                 <Button Text="Log in" HeightRequest="50" BackgroundColor="#5C6898"
                         TextColor="White" CornerRadius="5"
-                        FontFamily="Roboto-Regular.ttf" />
+                        FontFamily="Roboto-Regular.ttf"  />
                 <Label Text="Forgot password?" TextColor="#5C6898" HorizontalOptions="Center"
                            FontFamily="Roboto-Regular.ttf" FontSize="Medium" />
                 <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand">
@@ -52,10 +52,10 @@
                            VerticalOptions="Center" FontSize="Medium" FontFamily="Roboto-Regular.ttf" />
                     <BoxView BackgroundColor="#5C6898" HorizontalOptions="FillAndExpand" VerticalOptions="Center" HeightRequest="1"  />
                 </StackLayout>
-                <Button Text="Register"
+                <Button x:Name="Register" Text="Register"
                             HeightRequest="50" BackgroundColor="#5C6898"
                             TextColor="White" CornerRadius="5" FontFamily="Roboto-Regular.ttf"
-                            HorizontalOptions="Center" WidthRequest="320" Clicked="Button_Clicked" />
+                            HorizontalOptions="Center" WidthRequest="320" Command="{Binding RegistrationPageBtnCommand}"  />
             </StackLayout>
         </StackLayout>
     </ContentPage.Content>
