--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/RegistrationPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/RegistrationPage.xaml
@@ -58,10 +58,10 @@
 
                         <Frame HasShadow="True" BackgroundColor="Transparent" Grid.Row="5" Margin="0,-16,0,0" >
 
-                            <Button Text="Register"
+                            <Button x:Name="Registration"  Text="Register"
                             HeightRequest="50" BackgroundColor="#5C6898"
                             TextColor="White" CornerRadius="5" FontFamily="Roboto-Regular.ttf"
-                            HorizontalOptions="Center" WidthRequest="320" Clicked="Button_Clicked"
+                            HorizontalOptions="Center" WidthRequest="320" Command="{}"
                             />
                         </Frame>
 
