added navigation to registration page to thank you page

--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/RegistrationPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/RegistrationPage.xaml
@@ -61,7 +61,7 @@
                             <Button x:Name="Registration"  Text="Register"
                             HeightRequest="50" BackgroundColor="#5C6898"
                             TextColor="White" CornerRadius="5" FontFamily="Roboto-Regular.ttf"
-                            HorizontalOptions="Center" WidthRequest="320" Command="{}"
+                            HorizontalOptions="Center" WidthRequest="320" Command="{Binding RegisterPageBtnCommand}"
                             />
                         </Frame>
 
