--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/InsightsPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/InsightsPage.xaml
@@ -9,7 +9,19 @@
              IconImageSource="InsightsIcon"
              >
     <!--<xct:LazyView x:Name="lazyView" x:TypeArguments="controls:InsightsControl" />-->
-    <Grid  VerticalOptions="Center">
+    <StackLayout>
+    <Frame BackgroundColor="Transparent">
+            <Label Text="Mental Health is real! Children exhibit different behaviors that are often associated with mental heath"
+                   FontFamily="Montserrat-SemiBold.ttf"
+                   HorizontalOptions="Center"
+                   VerticalOptions="Center" 
+                   HorizontalTextAlignment="Center"
+                   VerticalTextAlignment="Center"
+                   FontSize="18"
+                   Margin="0,40,0,10"/>
+            
+    </Frame>
+    <Grid  VerticalOptions="Center" Margin="0,10,0,10">
 
         <Grid.RowDefinitions>
             <RowDefinition Height="200," />
@@ -23,8 +35,7 @@
         </Grid.ColumnDefinitions>
 
         <BoxView Color="#5C6898" CornerRadius="20" Margin="10,15,0,5"  />
-        <Label Text="What is 
-                           it?"
+        <Label Text="What Is Mental Health?"
                HorizontalOptions="Center"
                VerticalOptions="Center" 
                    HorizontalTextAlignment="Center"
@@ -92,6 +103,6 @@
 
     </Grid>
 
-
+    </StackLayout>
 
 </ContentPage>
