--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/ChooseProfileType.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/ChooseProfileType.xaml
@@ -9,13 +9,14 @@
         <StackLayout BackgroundColor="Transparent">
 
 
-            <Frame BackgroundColor="Transparent" Margin="0,10,1,0">
+            <Frame BackgroundColor="Transparent" Margin="0,10,1,0" >
 
                 <Label Text="Which role"
                    HorizontalTextAlignment="Center"
                    FontSize="Title"
                    TextColor="#5C6898"
-                       FontFamily="Roboto-Bold.ttf">
+                       FontFamily="Roboto-Bold.ttf"
+                       CharacterSpacing="0.1">
 
                 </Label>
 
@@ -27,7 +28,8 @@
                    HorizontalTextAlignment="Center"
                    FontSize="Title"
                    TextColor="#5C6898"
-                   FontFamily="Roboto-Bold.ttf">
+                   FontFamily="Roboto-Bold.ttf"
+                       CharacterSpacing="0.1">
 
                 </Label>
 
