--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/InsightsPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/InsightsPage.xaml
@@ -91,17 +91,17 @@
         <BoxView Grid.Row="2"
                  Grid.ColumnSpan="2"
                  Color="#5C6898" CornerRadius="20" Margin="9,-5,9,10"  />
-        <Label Grid.Row="2"
+        <Button Grid.Row="2"
                Grid.ColumnSpan="2"
                Text="Solutions"
                HorizontalOptions="Center"
                VerticalOptions="Center"
                    FontFamily="Montserrat-SemiBold.ttf"
-                   HorizontalTextAlignment="Center"
-                   VerticalTextAlignment="Center"
+                   BackgroundColor="Transparent"
                    TextColor="White"
                    FontSize="20"
-                   Padding="0,0,2,15"/>
+                   Padding="0,0,2,15"
+                Command="{Binding SolutionsBtnCommand}"/>
 
     </Grid>
 
