--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/ReportsPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/ReportsPage.xaml
@@ -1,10 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="SoteriaApp.Views.AboutUsPage">
-    <ContentPage.Content>
-        <StackLayout>
-           
-        </StackLayout>
-    </ContentPage.Content>
+             xmlns:prism="http://prismlibrary.com"
+             prism:ViewModelLocator.AutowireViewModel="True"
+             x:Class="SoteriaApp.Views.ReportsPage">
+  
 </ContentPage>
