--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/Controls/ProfileDetailControl.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/Controls/ProfileDetailControl.xaml
@@ -7,13 +7,13 @@
     <StackLayout>
 
         <Button x:Name="Learners"  Text="Learners"
-                            HeightRequest="50" BackgroundColor="#5C6898"
+                            HeightRequest="50" BackgroundColor="#AAE1EB"
                             TextColor="White" CornerRadius="5" FontFamily="Roboto-Regular.ttf"
                             HorizontalOptions="Center" WidthRequest="320" Command="{Binding LearnersPageBtnCommand}"
                 Margin="0,300,0,20"/>
 
         <Button x:Name="Reports"  Text="Reports"
-                            HeightRequest="50" BackgroundColor="#5C6898"
+                            HeightRequest="50" BackgroundColor="#7D86AD"
                             TextColor="White" CornerRadius="5" FontFamily="Roboto-Regular.ttf"
                             HorizontalOptions="Center" WidthRequest="320" Command="{Binding ReportsPageBtnCommand}"
              />
